# dumb_tetris

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main  main.c
src/: CMakeLists.txt  draw.c  draw.h  event.c  event.h  game.h  key.h  main.c  main.h  menu.c  menu.h  state.c  state.h  tetromino.c  tetromino.h  ui.h
